tests/lustre/syntax-errors/test_anonymous_enums.lus
-- type E = enum {A, B, C};

node x (a: enum {A, B, C}) returns ();
let
tel.